2005-01-31  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/sb-airs.el (shimbun-get-headers): Improve regexp.

2005-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-x51.el: Cosmetic fixes.

2005-01-31  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-x51.el (shimbun-get-headers): Remove useless list
	operations.

2005-01-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-x51.el (shimbun-get-headers): Fix nreverse usage.

2005-01-30  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m.el (w3m-attributes): Support cid urls.
	(w3m-external-view): Ditto.

2005-01-30  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-x51.el: Fix indentation.
	(shimbun-get-headers): Add support Message-ID check; Fix regex.

2005-01-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-ibm-dev.el (shimbun-ibm-dev-content-start): Follow
	the change of site design.
	(shimbun-ibm-dev-content-end): Ditto.
	(shimbun-make-contents): Removed.
	(shimbun-clear-contents): New method.

2005-01-30  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-ibm-dev.el (shimbun-ibm-dev-groups): Add "autonomic".
	(shimbun-get-headers): New method support "range" option.
	(shimbun-headers): Succeeded by `shimbun-get-headers'.

2005-01-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-force-window-update): Make it work whatever the
	value for the resize-mini-windows variable is.
	(w3m-update-tab-line): Ditto.

2005-01-26  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Add it.zensen,
	it.manage, it.seisaku, and it.digicore groups.
	(shimbun-nikkei-get-headers-it-zensen): New function.
	(shimbun-nikkei-get-headers-it-manage): New function.
	(shimbun-nikkei-get-headers-it-seisaku): New function.
	(shimbun-nikkei-get-headers-it-digicore): New function.

2005-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-rss.el (w3m-rss-parse-date-string): Support the date format
	in the RFC822 style which RSS 2.0 allows.