@@ -1,3 +1,8 @@
+2005-01-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
+
+	* shimbun/sb-airs.el (shimbun-get-headers): Retrieve summary page
+	into temporary buffer.
+
 2005-01-31  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* shimbun/sb-airs.el (shimbun-get-headers): Improve regexp.
